setting up dev env with game engine

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,669 @@
 _materials_promo_etc/
 _game_testfield/
+_прочее/
+Easier Data-Editor.lnk
+bg/sys/bc/bc1.bmp
+bg/sys/bc/bc2.bmp
+bg/sys/bc/bc3.bmp
+bg/sys/bc/bc4.bmp
+bg/sys/bc/bc5.bmp
+bg/sys/bc/bg.dat
+bg/sys/bc/s.bmp
+bg/sys/cuhk/a1.bmp
+bg/sys/cuhk/a2.bmp
+bg/sys/cuhk/bg.dat
+bg/sys/cuhk/bu1.bmp
+bg/sys/cuhk/floor1.bmp
+bg/sys/cuhk/floor2.bmp
+bg/sys/cuhk/floor3.bmp
+bg/sys/cuhk/grass.bmp
+bg/sys/cuhk/grass2.bmp
+bg/sys/cuhk/hill.bmp
+bg/sys/cuhk/hill2.bmp
+bg/sys/cuhk/lamp1.bmp
+bg/sys/cuhk/lamp2.bmp
+bg/sys/cuhk/lib.bmp
+bg/sys/cuhk/right.bmp
+bg/sys/cuhk/s.bmp
+bg/sys/cuhk/sky1.bmp
+bg/sys/cuhk/sky2.bmp
+bg/sys/cuhk/statue.bmp
+bg/sys/ft/bg.dat
+bg/sys/ft/c1.bmp
+bg/sys/ft/c2.bmp
+bg/sys/ft/f1.bmp
+bg/sys/ft/f2.bmp
+bg/sys/ft/f3.bmp
+bg/sys/ft/f4.bmp
+bg/sys/ft/f5.bmp
+bg/sys/ft/f6.bmp
+bg/sys/ft/f7.bmp
+bg/sys/ft/f8.bmp
+bg/sys/ft/f9.bmp
+bg/sys/ft/fa.bmp
+bg/sys/ft/fb.bmp
+bg/sys/ft/fc.bmp
+bg/sys/ft/fd.bmp
+bg/sys/ft/g1.bmp
+bg/sys/ft/g2.bmp
+bg/sys/ft/g3.bmp
+bg/sys/ft/g4.bmp
+bg/sys/ft/s.bmp
+bg/sys/ft/sky.bmp
+bg/sys/ft/w1.bmp
+bg/sys/ft/w2.bmp
+bg/sys/ft/w3.bmp
+bg/sys/gw/bg.dat
+bg/sys/gw/hill1.bmp
+bg/sys/gw/hill2.bmp
+bg/sys/gw/road1.bmp
+bg/sys/gw/road2.bmp
+bg/sys/gw/road3.bmp
+bg/sys/gw/s.bmp
+bg/sys/gw/sky.bmp
+bg/sys/hkc/back1.bmp
+bg/sys/hkc/bg.dat
+bg/sys/hkc/s.bmp
+bg/sys/lf/bg.dat
+bg/sys/lf/forestm1.bmp
+bg/sys/lf/forestm2.bmp
+bg/sys/lf/forestm3.bmp
+bg/sys/lf/forestm4.bmp
+bg/sys/lf/forests.bmp
+bg/sys/lf/forestt.bmp
+bg/sys/lf/land2.bmp
+bg/sys/lf/s.bmp
+bg/sys/qi/bg.dat
+bg/sys/qi/qi1.bmp
+bg/sys/qi/qi2.bmp
+bg/sys/qi/qi3.bmp
+bg/sys/qi/qi4.bmp
+bg/sys/qi/qi5.bmp
+bg/sys/qi/qi6.bmp
+bg/sys/qi/qi6b.bmp
+bg/sys/qi/qi7.bmp
+bg/sys/qi/qi8.bmp
+bg/sys/qi/qi9.bmp
+bg/sys/qi/qia.bmp
+bg/sys/qi/qib.bmp
+bg/sys/qi/qic.bmp
+bg/sys/qi/qid.bmp
+bg/sys/qi/qie.bmp
+bg/sys/qi/s.bmp
+bg/sys/sp/bg.dat
+bg/sys/sp/fire1.bmp
+bg/sys/sp/fire2.bmp
+bg/sys/sp/fire3.bmp
+bg/sys/sp/fire4.bmp
+bg/sys/sp/fire5.bmp
+bg/sys/sp/fire6.bmp
+bg/sys/sp/fire7.bmp
+bg/sys/sp/s.bmp
+bg/sys/sp/wall3.bmp
+bg/sys/sp/wall4.bmp
+bg/sys/thv/1al.bmp
+bg/sys/thv/1ar.bmp
+bg/sys/thv/1bl.bmp
+bg/sys/thv/1br.bmp
+bg/sys/thv/1cl.bmp
+bg/sys/thv/1cr.bmp
+bg/sys/thv/1dl.bmp
+bg/sys/thv/1dr.bmp
+bg/sys/thv/1el.bmp
+bg/sys/thv/1er.bmp
+bg/sys/thv/2a.bmp
+bg/sys/thv/2al.bmp
+bg/sys/thv/2ar.bmp
+bg/sys/thv/2b.bmp
+bg/sys/thv/2bl.bmp
+bg/sys/thv/2br.bmp
+bg/sys/thv/3.bmp
+bg/sys/thv/4.bmp
+bg/sys/thv/5.bmp
+bg/sys/thv/bg.dat
+bg/sys/thv/s.bmp
+bg/template/1/bg.dat
+bg/template/1/pic1.bmp
+bg/template/1/pic2.bmp
+bg/template/1/pic3.bmp
+bg/template/1/pic4.bmp
+bg/template/1/pic5.bmp
+bg/template/1/pic6.bmp
+bg/template/1/pic7.bmp
+bg/template/1/pic8.bmp
+bg/template/1/shadow.bmp
+bg/template/2/bg.dat
+bg/template/2/pic1.bmp
+bg/template/2/pic2.bmp
+bg/template/2/pic3.bmp
+bg/template/2/pic4.bmp
+bg/template/2/pic5.bmp
+bg/template/2/pic6.bmp
+bg/template/2/pic7.bmp
+bg/template/2/pic8.bmp
+bg/template/2/shadow.bmp
+bg/template/3/bg.dat
+bg/template/3/pic1.bmp
+bg/template/3/pic2.bmp
+bg/template/3/pic3.bmp
+bg/template/3/pic4.bmp
+bg/template/3/pic5.bmp
+bg/template/3/pic6.bmp
+bg/template/3/pic7.bmp
+bg/template/3/pic8.bmp
+bg/template/3/shadow.bmp
+bgm/boss1.wma
+bgm/boss2.wma
+bgm/main.wma
+bgm/stage1.wma
+bgm/stage2.wma
+bgm/stage3.wma
+bgm/stage4.wma
+bgm/stage5.wma
+bgm/old/boss1.wma
+bgm/old/boss2.wma
+bgm/old/main.wma
+bgm/old/stage1.wma
+bgm/old/stage2.wma
+bgm/old/stage3.wma
+bgm/old/stage4.wma
+bgm/old/stage5.wma
+data/001.wav
+data/002.wav
+data/003.wav
+data/004.wav
+data/005.wav
+data/006.wav
+data/007.wav
+data/008.wav
+data/009.wav
+data/010.wav
+data/011.wav
+data/012.wav
+data/013.wav
+data/014.wav
+data/015.wav
+data/016.wav
+data/017.wav
+data/018.wav
+data/019.wav
+data/020.wav
+data/021.wav
+data/022.wav
+data/023.wav
+data/024.wav
+data/025.wav
+data/026.wav
+data/027.wav
+data/028.wav
+data/029.wav
+data/030.wav
+data/031.wav
+data/032.wav
+data/033.wav
+data/034.wav
+data/035.wav
+data/036.wav
+data/037.wav
+data/038.wav
+data/039.wav
+data/040.wav
+data/041.wav
+data/042.wav
+data/043.wav
+data/044.wav
+data/045.wav
+data/046.wav
+data/047.wav
+data/048.wav
+data/049.wav
+data/050.wav
+data/051.wav
+data/052.wav
+data/053.wav
+data/054.wav
+data/055.wav
+data/056.wav
+data/057.wav
+data/058.wav
+data/059.wav
+data/060.wav
+data/061.wav
+data/062.wav
+data/063.wav
+data/064.wav
+data/065.wav
+data/066.wav
+data/067.wav
+data/068.wav
+data/069.wav
+data/070.wav
+data/071.wav
+data/072.wav
+data/073.wav
+data/074.wav
+data/075.wav
+data/076.wav
+data/077.wav
+data/078.wav
+data/079.wav
+data/080.wav
+data/081.wav
+data/082.wav
+data/083.wav
+data/084.wav
+data/085.wav
+data/086.wav
+data/087.wav
+data/088.wav
+data/089.wav
+data/090.wav
+data/091.wav
+data/092.wav
+data/093.wav
+data/094.wav
+data/095.wav
+data/096.wav
+data/097.wav
+data/098.wav
+data/099.wav
+data/100.wav
+data/101.wav
+data/102.wav
+data/adinfo.txt
+data/bandit.dat
+data/bat.dat
+data/bat_ball.dat
+data/bat_chase.dat
+data/broken_weapon.dat
+data/control.txt
+data/criminal.dat
+data/davis.dat
+data/davis_ball.dat
+data/deep.dat
+data/deep_ball.dat
+data/deep_chop.dat
+data/dennis.dat
+data/dennis_ball.dat
+data/dennis_chase.dat
+data/etc.dat
+data/firen.dat
+data/firen_ball.dat
+data/firen_flame.dat
+data/firzen.dat
+data/firzen_ball.dat
+data/firzen_chasef.dat
+data/firzen_chasei.dat
+data/freeze.dat
+data/freeze_ball.dat
+data/freeze_column.dat
+data/henry.dat
+data/henry_arrow1.dat
+data/henry_arrow2.dat
+data/henry_wind.dat
+data/hunter.dat
+data/jack.dat
+data/jack_ball.dat
+data/jan.dat
+data/jan_chase.dat
+data/jan_chaseh.dat
+data/john.dat
+data/john_ball.dat
+data/john_biscuit.dat
+data/julian_ball.dat
+data/julian_ball2.dat
+data/justin.dat
+data/justin_ball.dat
+data/louisEX.dat
+data/m_cancel.wav
+data/m_end.wav
+data/m_join.wav
+data/m_ok.wav
+data/m_pass.wav
+data/mark.dat
+data/monk.dat
+data/rudolf_weapon.dat
+data/sorcerer.dat
+data/template.dat
+data/temporary.txt
+data/weapon0.dat
+data/weapon1.dat
+data/weapon10.dat
+data/weapon11.dat
+data/weapon2.dat
+data/weapon3.dat
+data/weapon4.dat
+data/weapon5.dat
+data/weapon6.dat
+data/weapon7.dat
+data/weapon8.dat
+data/weapon9.dat
+data/woody.dat
+data/woody_ball.dat
+sprite/sys/ad0.bmp
+sprite/sys/ad1.bmp
+sprite/sys/bandit_0.bmp
+sprite/sys/bandit_0_mirror.bmp
+sprite/sys/bandit_0b.bmp
+sprite/sys/bandit_0b_mirror.bmp
+sprite/sys/bandit_1.bmp
+sprite/sys/bandit_1_mirror.bmp
+sprite/sys/bandit_1b.bmp
+sprite/sys/bandit_1b_mirror.bmp
+sprite/sys/bandit_f.bmp
+sprite/sys/bandit_s.bmp
+sprite/sys/bat_0.bmp
+sprite/sys/bat_0_mirror.bmp
+sprite/sys/bat_1.bmp
+sprite/sys/bat_1_mirror.bmp
+sprite/sys/bat_2.bmp
+sprite/sys/bat_2_mirror.bmp
+sprite/sys/bat_ball.bmp
+sprite/sys/bat_ball_mirror.bmp
+sprite/sys/bat_chase.bmp
+sprite/sys/bat_chase_mirror.bmp
+sprite/sys/bat_f.bmp
+sprite/sys/bat_s.bmp
+sprite/sys/broken.bmp
+sprite/sys/broken_mirror.bmp
+sprite/sys/broken2.bmp
+sprite/sys/broken2_mirror.bmp
+sprite/sys/criminal.bmp
+sprite/sys/criminal_mirror.bmp
+sprite/sys/davis_0.bmp
+sprite/sys/davis_0_mirror.bmp
+sprite/sys/davis_1.bmp
+sprite/sys/davis_1_mirror.bmp
+sprite/sys/davis_2.bmp
+sprite/sys/davis_2_mirror.bmp
+sprite/sys/davis_ball.bmp
+sprite/sys/davis_ball_mirror.bmp
+sprite/sys/davis_f.bmp
+sprite/sys/davis_s.bmp
+sprite/sys/deep_0.bmp
+sprite/sys/deep_0_mirror.bmp
+sprite/sys/deep_1.bmp
+sprite/sys/deep_1_mirror.bmp
+sprite/sys/deep_2.bmp
+sprite/sys/deep_2_mirror.bmp
+sprite/sys/deep_ball.bmp
+sprite/sys/deep_ball_mirror.bmp
+sprite/sys/deep_f.bmp
+sprite/sys/deep_s.bmp
+sprite/sys/dennis_0.bmp
+sprite/sys/dennis_0_mirror.bmp
+sprite/sys/dennis_1.bmp
+sprite/sys/dennis_1_mirror.bmp
+sprite/sys/dennis_2.bmp
+sprite/sys/dennis_2_mirror.bmp
+sprite/sys/dennis_ball.bmp
+sprite/sys/dennis_ball_mirror.bmp
+sprite/sys/dennis_chase.bmp
+sprite/sys/dennis_chase_mirror.bmp
+sprite/sys/dennis_f.bmp
+sprite/sys/dennis_s.bmp
+sprite/sys/etc.bmp
+sprite/sys/firen_0.bmp
+sprite/sys/firen_0_mirror.bmp
+sprite/sys/firen_1.bmp
+sprite/sys/firen_1_mirror.bmp
+sprite/sys/firen_2.bmp
+sprite/sys/firen_2_mirror.bmp
+sprite/sys/firen_ball.bmp
+sprite/sys/firen_ball_mirror.bmp
+sprite/sys/firen_exp.bmp
+sprite/sys/firen_exp_mirror.bmp
+sprite/sys/firen_f.bmp
+sprite/sys/firen_flame.bmp
+sprite/sys/firen_flame_mirror.bmp
+sprite/sys/firen_grd.bmp
+sprite/sys/firen_grd_mirror.bmp
+sprite/sys/firen_s.bmp
+sprite/sys/firzen_0.bmp
+sprite/sys/firzen_0_mirror.bmp
+sprite/sys/firzen_1.bmp
+sprite/sys/firzen_1_mirror.bmp
+sprite/sys/firzen_2.bmp
+sprite/sys/firzen_2_mirror.bmp
+sprite/sys/firzen_ball.bmp
+sprite/sys/firzen_ball_mirror.bmp
+sprite/sys/firzen_chasef.bmp
+sprite/sys/firzen_chasef_mirror.bmp
+sprite/sys/firzen_chasei.bmp
+sprite/sys/firzen_chasei_mirror.bmp
+sprite/sys/firzen_f.bmp
+sprite/sys/firzen_s.bmp
+sprite/sys/firzen_up.bmp
+sprite/sys/firzen_up_mirror.bmp
+sprite/sys/firzen_up2.bmp
+sprite/sys/firzen_up2_mirror.bmp
+sprite/sys/firzen_up3.bmp
+sprite/sys/firzen_up3_mirror.bmp
+sprite/sys/freeze_0.bmp
+sprite/sys/freeze_0_mirror.bmp
+sprite/sys/freeze_1.bmp
+sprite/sys/freeze_1_mirror.bmp
+sprite/sys/freeze_2.bmp
+sprite/sys/freeze_2_mirror.bmp
+sprite/sys/freeze_ball.bmp
+sprite/sys/freeze_ball_mirror.bmp
+sprite/sys/freeze_col.bmp
+sprite/sys/freeze_col_mirror.bmp
+sprite/sys/freeze_f.bmp
+sprite/sys/freeze_s.bmp
+sprite/sys/freeze_ww.bmp
+sprite/sys/freeze_ww_mirror.bmp
+sprite/sys/henry_0.bmp
+sprite/sys/henry_0_mirror.bmp
+sprite/sys/henry_1.bmp
+sprite/sys/henry_1_mirror.bmp
+sprite/sys/henry_2.bmp
+sprite/sys/henry_2_mirror.bmp
+sprite/sys/henry_arrow1.bmp
+sprite/sys/henry_arrow1_mirror.bmp
+sprite/sys/henry_arrow2.bmp
+sprite/sys/henry_arrow2_mirror.bmp
+sprite/sys/henry_f.bmp
+sprite/sys/henry_s.bmp
+sprite/sys/henry_wind.bmp
+sprite/sys/henry_wind_mirror.bmp
+sprite/sys/hunter_0.bmp
+sprite/sys/hunter_0_mirror.bmp
+sprite/sys/hunter_0b.bmp
+sprite/sys/hunter_0b_mirror.bmp
+sprite/sys/hunter_1.bmp
+sprite/sys/hunter_1_mirror.bmp
+sprite/sys/hunter_1b.bmp
+sprite/sys/hunter_1b_mirror.bmp
+sprite/sys/hunter_f.bmp
+sprite/sys/hunter_s.bmp
+sprite/sys/jack_0.bmp
+sprite/sys/jack_0_mirror.bmp
+sprite/sys/jack_0b.bmp
+sprite/sys/jack_0b_mirror.bmp
+sprite/sys/jack_1.bmp
+sprite/sys/jack_1_mirror.bmp
+sprite/sys/jack_1b.bmp
+sprite/sys/jack_1b_mirror.bmp
+sprite/sys/jack_b.bmp
+sprite/sys/jack_b_mirror.bmp
+sprite/sys/jack_f.bmp
+sprite/sys/jack_s.bmp
+sprite/sys/jan_0.bmp
+sprite/sys/jan_0_mirror.bmp
+sprite/sys/jan_1.bmp
+sprite/sys/jan_1_mirror.bmp
+sprite/sys/jan_2.bmp
+sprite/sys/jan_2_mirror.bmp
+sprite/sys/jan_3.bmp
+sprite/sys/jan_3_mirror.bmp
+sprite/sys/jan_chase.bmp
+sprite/sys/jan_chase_mirror.bmp
+sprite/sys/jan_chaseb.bmp
+sprite/sys/jan_chaseb_mirror.bmp
+sprite/sys/jan_chaseh.bmp
+sprite/sys/jan_chaseh_mirror.bmp
+sprite/sys/jan_f.bmp
+sprite/sys/jan_s.bmp
+sprite/sys/john_0.bmp
+sprite/sys/john_0_mirror.bmp
+sprite/sys/john_1.bmp
+sprite/sys/john_1_mirror.bmp
+sprite/sys/john_2.bmp
+sprite/sys/john_2_mirror.bmp
+sprite/sys/john_3.bmp
+sprite/sys/john_3_mirror.bmp
+sprite/sys/john_ball.bmp
+sprite/sys/john_ball_mirror.bmp
+sprite/sys/john_biscuit.bmp
+sprite/sys/john_biscuit_mirror.bmp
+sprite/sys/john_f.bmp
+sprite/sys/john_s.bmp
+sprite/sys/julian_0.bmp
+sprite/sys/julian_0_mirror.bmp
+sprite/sys/julian_1.bmp
+sprite/sys/julian_1_mirror.bmp
+sprite/sys/julian_2.bmp
+sprite/sys/julian_2_mirror.bmp
+sprite/sys/julian_ball.bmp
+sprite/sys/julian_ball_mirror.bmp
+sprite/sys/julian_ball2.bmp
+sprite/sys/julian_ball2_mirror.bmp
+sprite/sys/julian_col.bmp
+sprite/sys/julian_col_mirror.bmp
+sprite/sys/julian_col2.bmp
+sprite/sys/julian_col2_mirror.bmp
+sprite/sys/julian_exp.bmp
+sprite/sys/julian_exp_mirror.bmp
+sprite/sys/julian_f.bmp
+sprite/sys/julian_s.bmp
+sprite/sys/justin_0.bmp
+sprite/sys/justin_0_mirror.bmp
+sprite/sys/justin_0b.bmp
+sprite/sys/justin_0b_mirror.bmp
+sprite/sys/justin_1.bmp
+sprite/sys/justin_1_mirror.bmp
+sprite/sys/justin_1b.bmp
+sprite/sys/justin_1b_mirror.bmp
+sprite/sys/justin_ball.bmp
+sprite/sys/justin_ball_mirror.bmp
+sprite/sys/justin_f.bmp
+sprite/sys/justin_s.bmp
+sprite/sys/knight_0.bmp
+sprite/sys/knight_0_mirror.bmp
+sprite/sys/knight_0b.bmp
+sprite/sys/knight_0b_mirror.bmp
+sprite/sys/knight_1.bmp
+sprite/sys/knight_1_mirror.bmp
+sprite/sys/knight_1b.bmp
+sprite/sys/knight_1b_mirror.bmp
+sprite/sys/knight_2.bmp
+sprite/sys/knight_2_mirror.bmp
+sprite/sys/knight_2b.bmp
+sprite/sys/knight_2b_mirror.bmp
+sprite/sys/knight_f.bmp
+sprite/sys/knight_s.bmp
+sprite/sys/louis_0.bmp
+sprite/sys/louis_0_mirror.bmp
+sprite/sys/louis_1.bmp
+sprite/sys/louis_1_mirror.bmp
+sprite/sys/louis_2.bmp
+sprite/sys/louis_2_mirror.bmp
+sprite/sys/louis_f.bmp
+sprite/sys/louis_s.bmp
+sprite/sys/louisEX_0.bmp
+sprite/sys/louisEX_0_mirror.bmp
+sprite/sys/louisEX_1.bmp
+sprite/sys/louisEX_1_mirror.bmp
+sprite/sys/louisEX_2.bmp
+sprite/sys/louisEX_2_mirror.bmp
+sprite/sys/louisEX_3.bmp
+sprite/sys/louisEX_3_mirror.bmp
+sprite/sys/louisEX_4.bmp
+sprite/sys/louisEX_4_mirror.bmp
+sprite/sys/louisEX_f.bmp
+sprite/sys/louisEX_s.bmp
+sprite/sys/mark_0.bmp
+sprite/sys/mark_0_mirror.bmp
+sprite/sys/mark_0b.bmp
+sprite/sys/mark_0b_mirror.bmp
+sprite/sys/mark_1.bmp
+sprite/sys/mark_1_mirror.bmp
+sprite/sys/mark_1b.bmp
+sprite/sys/mark_1b_mirror.bmp
+sprite/sys/mark_f.bmp
+sprite/sys/mark_s.bmp
+sprite/sys/monk_0.bmp
+sprite/sys/monk_0_mirror.bmp
+sprite/sys/monk_0b.bmp
+sprite/sys/monk_0b_mirror.bmp
+sprite/sys/monk_1.bmp
+sprite/sys/monk_1_mirror.bmp
+sprite/sys/monk_1b.bmp
+sprite/sys/monk_1b_mirror.bmp
+sprite/sys/monk_f.bmp
+sprite/sys/monk_s.bmp
+sprite/sys/rudolf_0.bmp
+sprite/sys/rudolf_0_mirror.bmp
+sprite/sys/rudolf_1.bmp
+sprite/sys/rudolf_1_mirror.bmp
+sprite/sys/rudolf_2.bmp
+sprite/sys/rudolf_2_mirror.bmp
+sprite/sys/rudolf_3.bmp
+sprite/sys/rudolf_3_mirror.bmp
+sprite/sys/rudolf_f.bmp
+sprite/sys/rudolf_s.bmp
+sprite/sys/rudolf_smoke.bmp
+sprite/sys/rudolf_smoke_mirror.bmp
+sprite/sys/rudolf_weapon.bmp
+sprite/sys/rudolf_weapon_mirror.bmp
+sprite/sys/sorcerer_0.bmp
+sprite/sys/sorcerer_0_mirror.bmp
+sprite/sys/sorcerer_0b.bmp
+sprite/sys/sorcerer_0b_mirror.bmp
+sprite/sys/sorcerer_1.bmp
+sprite/sys/sorcerer_1_mirror.bmp
+sprite/sys/sorcerer_1b.bmp
+sprite/sys/sorcerer_1b_mirror.bmp
+sprite/sys/sorcerer_f.bmp
+sprite/sys/sorcerer_s.bmp
+sprite/sys/weapon0.bmp
+sprite/sys/weapon0_mirror.bmp
+sprite/sys/weapon1.bmp
+sprite/sys/weapon1_mirror.bmp
+sprite/sys/weapon10.bmp
+sprite/sys/weapon10_mirror.bmp
+sprite/sys/weapon11.bmp
+sprite/sys/weapon11_mirror.bmp
+sprite/sys/weapon2.bmp
+sprite/sys/weapon2_mirror.bmp
+sprite/sys/weapon3.bmp
+sprite/sys/weapon3_mirror.bmp
+sprite/sys/weapon4.bmp
+sprite/sys/weapon4_mirror.bmp
+sprite/sys/weapon5.bmp
+sprite/sys/weapon5_mirror.bmp
+sprite/sys/weapon6.bmp
+sprite/sys/weapon6_mirror.bmp
+sprite/sys/weapon7.bmp
+sprite/sys/weapon7_mirror.bmp
+sprite/sys/weapon8.bmp
+sprite/sys/weapon8_mirror.bmp
+sprite/sys/weapon9.bmp
+sprite/sys/weapon9_mirror.bmp
+sprite/sys/woody_0.bmp
+sprite/sys/woody_0_mirror.bmp
+sprite/sys/woody_1.bmp
+sprite/sys/woody_1_mirror.bmp
+sprite/sys/woody_2.bmp
+sprite/sys/woody_2_mirror.bmp
+sprite/sys/woody_ball.bmp
+sprite/sys/woody_ball_mirror.bmp
+sprite/sys/woody_f.bmp
+sprite/sys/woody_s.bmp
+sprite/template1/0.bmp
+sprite/template1/0_mirror.bmp
+sprite/template1/1.bmp
+sprite/template1/1_mirror.bmp
+sprite/template1/face.bmp
+sprite/template1/s.bmp
