- Добавлены отрицательные эффекты, которые срабатывают по невидимым и неуязвимым противникам. Работаю совместно с любыми кастомными эффектами.

--- a/.gitignore
+++ b/.gitignore
@@ -666,3 +666,5 @@ sprite/template1/1_mirror.bmp
 sprite/template1/face.bmp
 sprite/template1/s.bmp
 Easier Data-Editor.lnk
+sprite/sys/spark.png
+DC v1.5.lnk
